<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|end"
        android:hint="@string/_01"
        android:maxLength="15"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="#616161"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|end"
        android:hint="@string/_0"
        android:maxLength="15"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|end"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:text="@string/_7"
            android:onClick="btnClick_7"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="btnClick_8"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_8"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_9"
            android:text="@string/_9"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:text="@string/plus"
            android:onClick="btnClick_add"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_delete"
            android:background="@drawable/btn_background2"
            android:src="@drawable/ic_backspace_black_24dp_foreground"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:text="@string/_4"
            android:onClick="btnClick_4"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_5"
            android:onClick="btnClick_5"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/_6"
            android:onClick="btnClick_6"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:text="@string/minus"
            android:onClick="btnClick_substract"
            android:textColor="@color/colorSecondaryLite"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background2"
            android:text="@string/c"
            android:onClick="btnClick_clear"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background2"
                    android:text="@string/_1"
                    android:onClick="btnClick_1"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_2"
                    android:onClick="btnClick_2"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_3"
                    android:onClick="btnClick_3"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background2"
                    android:text="@string/multiply"
                    android:onClick="btnClick_multiply"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/_03"
                    android:onClick="btnClick_0"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/dot"
                    android:onClick="btnClick_dot"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background2"
                    android:text="@string/devesion"
                    android:onClick="btnClick_divide"
                    android:textColor="@color/colorSecondaryLite"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background2"
                android:text="@string/equals"
                android:onClick="btnClick_equal"
                android:textColor="@color/colorTextonPrimary"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>